--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Top", root_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Log in", login_path %></li>
       </ul>
     </nav>
   </div>
